--- a/ev1-20241-727-BASE/ev1-20241-727-BASE/pregunta-2.html
+++ b/ev1-20241-727-BASE/ev1-20241-727-BASE/pregunta-2.html
@@ -31,6 +31,18 @@
   <div id="imagenG">
     <img src="/ev1-20241-727-BASE/imagenes/ferrari.webp" height="500" width="800" id="ferr">
   </div>
+
+  <div id="imagenesvarias">
+    <img src="/ev1-20241-727-BASE/imagenes/484922.jpg" height="122" width="220">
+    <img src="/ev1-20241-727-BASE/imagenes/492392.webp" height="122" width="220">
+    <img src="/ev1-20241-727-BASE/imagenes/501834.jpg" height="122" width="220">
+    <img src="/ev1-20241-727-BASE/imagenes/501843.jpg" height="122" width="220">
+    <img src="/ev1-20241-727-BASE/imagenes/501844.jpg" height="122" width="220">
+  </div>
+
+  <footer>
+    <p>Programación Web 729 / 2024-1 ALEJANDRO MEDINA PACHERRES</p>
+  </footer>
 </body>
 
 </html>
